--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,33 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  build-lint-and-test:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: cimg/python:3.9.6
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: virtual env
+          command: env/scripts/activate
+      - run:
+            name: install dependencies
+            command: pip install -r requirements.txt
+      - run:
+            name: run linter
+            command: |
+              mkdir -p test-results/flake8
+              flake8 . --output-file=test-results/flake8/flake8.txt
+      - run:
+          name: run tests
+          command: |
+            mkdir -p test-results/pytest
+            pytest --junitxml=test-results/junit.xml
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+      - store_test_results:
+          path: test-results
+
+
 workflows:
-  say-hello-workflow:
+  main-workflow:
     jobs:
-      - say-hello
+      - build-lint-and-test
