--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,18 @@ jobs:
       - image: cimg/python:3.9.6
     steps:
       - checkout
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
-          name: virtual env
-          command: env/scripts/activate
-      - run:
-            name: install dependencies
-            command: pip install -r requirements.txt
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - save_cache:
+          key: deps1
+          paths:
+            - "venv"
+
       - run:
             name: run linter
             command: |
@@ -20,6 +26,7 @@ jobs:
       - run:
           name: run tests
           command: |
+            . venv/bin/activate
             mkdir -p test-results/pytest
             pytest --junitxml=test-results/junit.xml
 
