Update flake8 part

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,9 @@ jobs:
             name: run linter
             command: |
               . venv/bin/activate
-              mkdir -p test-results/flake8
-              flake8 . --output-file=flake8.txt test-results/flake8/
+              flake8
+              # mkdir -p test-results/flake8
+              # flake8 . --output-file=flake8.txt test-results/flake8/
       - run:
           name: run tests
           command: |
