--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,16 +17,17 @@ jobs:
           key: deps1
           paths:
             - "venv"
-
       - run:
-            name: run linter
+            name: run linter and save it in XML
             command: |
               . venv/bin/activate
               flake8
-              # mkdir -p test-results/flake8
-              # flake8 . --output-file=flake8.txt test-results/flake8/
+              mkdir -p test-results/flake8
+              flake8 . --output-file=flake8.txt test-results/flake8/
+              flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
+            when: always
       - run:
-          name: run tests
+          name: run tests and save it in XML
           command: |
             . venv/bin/activate
             mkdir -p test-results/pytest
@@ -34,7 +35,9 @@ jobs:
 
       - store_test_results:
           path: test-results
-
+      - store_artifacts:
+          path: test-results
+          destination: artifact-file
 
 workflows:
   main-workflow:
