--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
               . venv/bin/activate
               flake8
               mkdir -p test-results/flake8
-              flake8 . --output-file=flake8.txt test-results/flake8/
-              flake8_junit test-reports/flake8/flake8.txt test-reports/flake8/flake8_junit.xml
+              flake8 . --output-file=test-results/flake8/flake8.txt
+              flake8_junit test-results/flake8/flake8.txt test-results/flake8/flake8_junit.xml
             when: always
       - run:
           name: run tests and save it in XML
