--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,24 @@ jobs:
           path: test-results
           destination: artifact-file
 
+  build-and-push-to-dockerhub:
+    docker:
+      - image: cimg/python:3.9.6
+    
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: build and push docker image
+          command: |
+            TAG=0.1.$CIRCLE_BUILD_NUM
+            docker build -t $DOCKER_USER/oc-lettings:$TAG .
+            echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
+            docker push $DOCKER_USER/oc-lettings:$TAG
+          
 workflows:
   main-workflow:
     jobs:
       - build-lint-and-test
+      - build-and-push-to-dockerhub
