--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  heroku: circleci/heroku@2.0.0
+
 jobs:
   build-lint-and-test:
     docker:
@@ -55,7 +58,22 @@ jobs:
             docker build -t $DOCKER_USER/oc-lettings:$TAG .
             echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
             docker push $DOCKER_USER/oc-lettings:$TAG
-          
+
+  build-and-deploy-to-heroku:
+    docker:
+      - image: cimg/python:3.9.6
+    
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: docker build .
+      - heroku/install
+      - run: heroku container:login
+      - heroku/push-docker-image
+      - heroku/release-docker-image
+
+
 workflows:
   main-workflow:
     jobs:
@@ -65,4 +83,10 @@ workflows:
             - build-lint-and-test
           filters:
             branches:
-              only: master 
+              only: master
+      - build-and-deploy-to-heroku:
+          requires:
+            - build-and-push-to-dockerhub
+          filters:
+            branches:
+              only: master
